packages/precision-diffs/src/style.css
/* ... */
[data-line-annotation][data-selected-line] {
  background-color: unset;

  &::before {
    content: '';
    position: sticky;
    top: 0;
    left: 0;
    display: block;
    border-right: var(--pjs-gap-style, 1px solid var(--pjs-bg));
    background-color: var(--pjs-bg-selection-number);
  }

  [data-annotation-content] {
    background-color: var(--pjs-bg-selection);
  }
}

[data-interactive-lines] [data-line] {
  cursor: pointer;
}

[data-type='split'][data-overflow='wrap'] [data-additions] [data-line],
[data-type='split'][data-overflow='wrap'] [data-additions] [data-separator],
[data-type='split'][data-overflow='wrap']
  [data-additions]
  [data-line-annotation] {
  border-left: 2px solid var(--pjs-bg);
}

[data-buffer] {
  position: sticky;
  left: 0;
  grid-column: 1 / 3;
  user-select: none;
  /* We multiply by 1.414 (√2) to better approximate the diagonal repeat distance */
  background-image: repeating-linear-gradient(
    -45deg,
    transparent,
    transparent calc(3px * 1.414),
    var(--pjs-bg-buffer) calc(3px * 1.414),
    var(--pjs-bg-buffer) calc(4px * 1.414)
  );
  min-height: 1lh;
  width: var(--pjs-column-width, auto);
}

[data-separator] {
  grid-column: span 2;
}

[data-separator='metadata'],
[data-separator]:empty {
  min-height: 4px;
  background-color: var(--pjs-bg-separator);
  display: grid;
  grid-template-columns: subgrid;
}

[data-separator-wrapper] {
  user-select: none;
  fill: currentColor;
  overflow: hidden;
}

[data-separator='metadata'] [data-separator-wrapper] {
  grid-column: 2 / 3;
  width: var(--pjs-column-content-width);
  position: sticky;
  left: var(--pjs-column-number-width);
  padding: 4px 1ch;
}

[data-separator='line-info'] {
  margin-block: var(--pjs-gap-block, var(--pjs-gap-fallback));
}

[data-separator='line-info'][data-separator-first] {
  margin-top: 0;
}

[data-separator='line-info'][data-separator-last] {
  margin-bottom: 0;
}

[data-separator='line-info'] [data-separator-wrapper] {
  position: sticky;
  display: flex;
  align-items: center;
  gap: 2px;
  width: auto;
  width: calc(var(--pjs-column-width) - var(--pjs-gap-fallback));
  border-radius: 6px;
}

@media (pointer: fine) {
  [data-separator-wrapper][data-separator-multi-button] {
    display: grid;
    grid-template-columns: auto minmax(0, 1fr);
    grid-template-rows: 15px 15px;

    [data-expand-button] {
      height: 15px;
    }
  }

  [data-type='split']
    [data-additions]
    [data-separator-wrapper][data-separator-multi-button] {
    grid-template-columns: minmax(0, 1fr) auto;
  }

  [data-type='split'] [data-additions] [data-expand-button] {
    grid-column: 2;
  }

  [data-type='split'] [data-additions] [data-separator-content] {
    grid-column: 1;
  }
}

[data-expand-button],
[data-separator-content] {
  display: flex;
  align-items: center;
  background-color: var(--pjs-bg-separator);
}

[data-expand-button] {
  justify-content: center;
  flex-shrink: 0;
  cursor: pointer;
  width: 32px;
  height: 32px;
  opacity: 0.65;
}

@media (pointer: fine) {
  [data-expand-button]:hover {
    opacity: 1;
  }

  [data-line]:hover {
    z-index: 2;
  }
}

[data-expand-up] [data-icon] {
  transform: scaleY(-1);
}

[data-separator-content] {
  flex: 1 1 auto;
  padding: 0 1ch;
  height: 32px;
  opacity: 0.65;
  overflow: hidden;
  justify-content: flex-start;

  grid-column: 2;
  grid-row: 1 / -1;
}

[data-unmodified-lines] {
  display: block;
  overflow: hidden;
  min-width: 0;
  text-overflow: ellipsis;
  white-space: nowrap;
  flex: 0 1 auto;
}

[data-type='split'] [data-additions] [data-separator-content] {
  justify-content: flex-end;
}

[data-type='file']
  [data-code]
  [data-separator='line-info']
  [data-separator-wrapper] {
  left: var(--pjs-gap-inline, var(--pjs-gap-fallback));
  margin-left: var(--pjs-gap-inline, var(--pjs-gap-fallback));
  margin-right: var(--pjs-gap-inline, var(--pjs-gap-fallback));
  width: calc(
    var(--pjs-column-width) -
      (var(--pjs-gap-inline, var(--pjs-gap-fallback)) * 2)
  );
}

[data-type='split']
  [data-deletions]
  [data-separator='line-info']
  [data-separator-wrapper] {
  left: var(--pjs-gap-fallback);
  margin-left: var(--pjs-gap-fallback);
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

[data-type='split']
  [data-additions]
  [data-separator='line-info']
  [data-separator-wrapper] {
  left: 0;
  margin-right: var(--pjs-gap-inline, var(--pjs-gap-fallback));
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  flex-direction: row-reverse;
}

[data-line] {
  background-color: var(--pjs-bg);
  color: var(--pjs-fg);
}

[data-type='split'][data-overflow='wrap'] [data-deletions] {
  [data-line-annotation],
  [data-buffer],
  [data-line],
  [data-separator] {
    grid-column: 1 / 3;
  }
}

[data-line-annotation] {
  min-height: var(--pjs-annotation-min-height, 0);
  background-color: var(--pjs-bg-context);
  z-index: 3;
}

[data-type='split'][data-overflow='wrap'] [data-additions] {
  [data-line-annotation],
  [data-buffer],
  [data-line],
  [data-separator] {
    grid-column: 3 / 5;
  }
}

[data-separator='custom'] {
  display: grid;
  grid-template-columns: subgrid;
}

[data-column-content],
[data-column-number] {
  position: relative;
  padding-inline: 1ch;
}

[data-indicators='classic'] [data-column-content] {
  padding-inline-start: 2ch;
}

[data-indicators='classic'] {
  [data-line-type='change-addition'] [data-column-content]::before,
  [data-line-type='change-deletion'] [data-column-content]::before {
    display: inline-block;
    width: 1ch;
    height: 1lh;
    position: absolute;
    top: 0;
    left: 0;
    user-select: none;
  }

  [data-line-type='change-addition'] [data-column-content]::before {
    content: '+';
    color: var(--pjs-addition-base);
  }

  [data-line-type='change-deletion'] [data-column-content]::before {
    content: '-';
    color: var(--pjs-deletion-base);
  }
}
/* ... */

